<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar"
    android:background="@color/sh1"
    android:columnCount="1">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="124dp"
        android:layout_height="28dp"
        android:text="@string/calendar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"

        >
    </TextView>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="147dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/im">

        </ImageView>
    </TableRow>

    <CalendarView
        android:layout_marginTop="51dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityHeading="true"
        android:dateTextAppearance="@style/TextSizeLar"
        android:textDirection="@style/TextSizeLar"
        android:minDate="01/01/2026"
        android:selectedWeekBackgroundColor="@color/gray"
        android:theme="@style/CalenderViewCustom"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        android:weekNumberColor="#F44336"

        >

    </CalendarView>

    <LinearLayout
        android:background="@drawable/menu"
        android:layout_marginStart="36dp"
        android:layout_marginTop="94dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/list"
            android:layout_marginStart="41dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/sh3" />
        <TextView
            android:layout_width="18dp"
            android:layout_height="13dp"
            android:layout_marginStart="48dp"
            android:text="@string/list"
            android:textSize="11sp"
            android:textColor="@color/sh3"
            android:layout_marginTop="0dp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/alarm"
                android:layout_marginStart="18dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/sh3" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="13dp"
                android:layout_marginStart="19dp"
                android:text="@string/alarm"
                android:textSize="11sp"
                android:textColor="@color/sh3"
                android:layout_marginTop="0dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/calender"
                android:layout_marginStart="18dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/sh1" />

            <TextView
                android:layout_width="44dp"
                android:layout_height="13dp"
                android:layout_marginStart="12dp"
                android:text="@string/calendarEnglish"
                android:textSize="11sp"
                android:textColor="@color/sh1"
                android:layout_marginTop="0dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/setting"
                android:layout_marginStart="18dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/sh3" />

            <TextView
                android:layout_width="41dp"
                android:layout_height="13dp"
                android:layout_marginStart="14dp"
                android:text="@string/settingsEnglish"
                android:textSize="11sp"
                android:textColor="@color/sh3"
                android:layout_marginTop="0dp" />
        </LinearLayout>



    </LinearLayout>



</GridLayout>